# nektar

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt
.gitlab-ci/: build-and-test.sh  check-compiled-files.py
cmake/: NektarCommon.cmake  ThirdPartyBoost.cmake  ThirdPartyMPI.cmake  ThirdPartyPETSc.cmake  ThirdPartyPython.cmake  ThirdPartyScotch.cmake
cmake/thirdparty-patches/: cwipi-disable-warnings.patch
docker/nektar-env/: Dockerfile_debian_full  Dockerfile_fedora_full  Dockerfile_ubuntu_full  fedora40_default_packages.txt  fedora41_full_packages.txt
docs/developer-guide/introduction/: introduction.tex
docs/developer-guide/prelims/: prelims.tex
docs/user-guide/solvers/: compressible-flow.tex  pulse-wave.tex
docs/user-guide/utilities/: nekmesh.tex
pkg/debian/: changelog
pkg/redhat/: nektar-fedora-39.spec
solvers/ADRSolver/: CMakeLists.txt
solvers/ADRSolver/EquationSystems/: EigenValuesAdvection.cpp  EigenValuesAdvection.h  Helmholtz.cpp  Helmholtz.h  Laplace.cpp  Laplace.h  MMFAdvection.cpp  MMFAdvection.h  Poisson.cpp  Poisson.h  Projection.cpp  Projection.h  SteadyAdvectionDiffusion.cpp  SteadyAdvectionDiffusion.h  SteadyAdvectionDiffusionReaction.cpp  SteadyAdvectionDiffusionReaction.h  UnsteadyAdvection.cpp  UnsteadyAdvection.h  UnsteadyAdvectionDiffusion.h  UnsteadyDiffusion.cpp  UnsteadyDiffusion.h  UnsteadyInviscidBurgers.cpp  UnsteadyInviscidBurgers.h  UnsteadyReactionDiffusion.h  UnsteadyViscousBurgers.cpp  UnsteadyViscousBurgers.h
solvers/ADRSolver/Tests/: AdvDiff3D_AllElmt_GJP.xml  AdvDiff_QuadTri_GJP.xml  Advection1D_FRDG_GAUSS_LAGRANGE.xml  Advection1D_FRDG_GLL_LAGRANGE.xml  Advection1D_FRDG_GLL_LAGRANGE_SEM.xml  Advection1D_FRDG_MODIFIED.xml  Advection1D_FRHU_GLL_LAGRANGE.xml  Advection1D_FRHU_GLL_LAGRANGE_SEM.xml  Advection1D_FRHU_MODIFIED.xml  Advection1D_FRSD_GLL_LAGRANGE.xml  Advection1D_FRSD_GLL_LAGRANGE_SEM.xml  Advection1D_FRSD_MODIFIED.xml  Advection1D_WeakDG_GLL_LAGRANGE_SEM.tst  Advection1D_WeakDG_GLL_LAGRANGE_SEM.xml  Advection2D_ISO_deformed_GAUSS_LAGRANGE_3x3.tst  Advection2D_ISO_deformed_GAUSS_LAGRANGE_3x3.xml  Advection2D_ISO_deformed_GLL_LAGRANGE_3x3.tst  Advection2D_ISO_deformed_GLL_LAGRANGE_3x3.xml  Advection2D_ISO_deformed_GLL_LAGRANGE_SEM_3x3.tst  Advection2D_ISO_deformed_GLL_LAGRANGE_SEM_3x3.xml  Advection2D_ISO_deformed_MODIFIED_3x3.tst  Advection2D_ISO_deformed_MODIFIED_3x3.xml  Advection2D_ISO_reg_def_MODIFIED_3x3.tst  Advection2D_ISO_reg_def_MODIFIED_3x3.xml  Advection2D_ISO_regular_GAUSS_LAGRANGE_3x3.tst  Advection2D_ISO_regular_GAUSS_LAGRANGE_3x3.xml  Advection2D_ISO_regular_GLL_LAGRANGE_3x3.tst  Advection2D_ISO_regular_GLL_LAGRANGE_3x3.xml  Advection2D_ISO_regular_GLL_LAGRANGE_SEM_3x3.tst  Advection2D_ISO_regular_GLL_LAGRANGE_SEM_3x3.xml  Advection2D_ISO_regular_MODIFIED_3x3.tst  Advection2D_ISO_regular_MODIFIED_3x3.xml  Advection2D_ISO_regular_SSPRK2.tst  Advection2D_ISO_regular_SSPRK2.xml  Advection2D_ISO_regular_SSPRK3.tst  Advection2D_ISO_regular_SSPRK3.xml  Advection2D_Quad_GJP.xml  Advection2D_Tri_GJP.xml  Advection2D_dirichlet_deformed_GAUSS_LAGRANGE_10x10.tst  Advection2D_dirichlet_deformed_GAUSS_LAGRANGE_10x10.xml  (+179 more)
solvers/AcousticSolver/: CMakeLists.txt
solvers/AcousticSolver/EquationSystems/: APE.cpp  APE.h  AcousticSystem.cpp  AcousticSystem.h  LEE.cpp  LEE.h
solvers/AcousticSolver/RiemannSolvers/: APELaxFriedrichsSolver.cpp  APEUpwindSolver.cpp  AcousticSolver.cpp  LEELaxFriedrichsSolver.cpp  LEESolver.cpp  LEEUpwindSolver.cpp
solvers/AcousticSolver/Tests/: APE_1DPulseSource_WeakDG_MODIFIED.xml  APE_1DPulseWall_WeakDG_MODIFIED.xml  APE_2DChannel_WeakDG_MODIFIED.xml  APE_2DPulseAdv_WeakDG_MODIFIED.xml  APE_2DPulseInterp_WeakDG_MODIFIED.xml  APE_2DPulseWall_WeakDG_MODIFIED.xml  APE_2DVariableC_WeakDG_MODIFIED.xml  APE_3DMMF_WeakDG_MODIFIED.xml  APE_3DPulseWall_WeakDG_MODIFIED.xml  APE_3DPulse_WeakDG_MODIFIED.xml  LEE_1DPulseSource_WeakDG_MODIFIED.xml  LEE_2DPulseAdv_WeakDG_MODIFIED.xml  LEE_2DPulseWall_WeakDG_MODIFIED.xml  LEE_2DVariableC_WeakDG_MODIFIED.xml
solvers/CardiacEPSolver/: CMakeLists.txt
solvers/CardiacEPSolver/Filters/: FilterElectrogram.cpp  FilterElectrogram.h
solvers/CardiacEPSolver/Utilities/CellMLToNektar/: convert.py  environment.yml  example_script.py
solvers/CardiacEPSolver/Utilities/CellMLToNektar/nektar/: __init__.py  _ewriter.py  _exporter.py
solvers/CardiacEPSolver/Utilities/CellMLToNektar/nektar/template/: model.cpp  model.h
solvers/CardiacEPSolver/Utilities/PrePacing/: CMakeLists.txt  Prepacing.cpp
solvers/CardiacEPSolver/Utilities/PrePacing/Tests/: CellMLTest.tst  CellMLTest.xml
solvers/CompressibleFlowSolver/: CMakeLists.txt
solvers/CompressibleFlowSolver/ArtificialDiffusion/: ArtificialDiffusion.cpp  ArtificialDiffusion.h  NonSmoothShockCapture.cpp  NonSmoothShockCapture.h
solvers/CompressibleFlowSolver/BoundaryConditions/: CFSBndCond.cpp  CFSBndCond.h  EnforceEntropyPressure.cpp  EnforceEntropyPressure.h  EnforceEntropyTotalEnthalpy.cpp  ExtrapOrder0BC.cpp  (+30 more)
solvers/DiffusionSolver/: DiffusionSolverTimeInt.cpp
solvers/PulseWaveSolver/: PulseWaveSolver.cpp
solvers/VortexWaveInteraction/: VortexWaveInteraction.cpp
tests/: CMakeLists.txt  Tester.cpp.in
utilities/: CMakeLists.txt
utilities/Extras/: CheckXmlFile.cpp  VtkToFld.cpp
utilities/FieldConvert/: FieldConvert.cpp
utilities/NekMesh/: CMakeLists.txt
(+611 files in other folders)
